<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name">deliva</string>

    <!--LOGIN ACTIVITY -->
    <string name="user_password">Senha</string>
    <string name="user_email">Usuário</string>
    <string name="login_empty_password">O campo senha não pode ser vazio</string>
    <string name="login_empty_username">O campo usuário não pode ser vazio</string>
    <string name="login_error">usuário ou senha inválidos</string>
    <string name="exit">Sair</string>
    <string name="forgot_password">Esqueceu sua senha? Clique aqui</string>
    <string name="login">Entrar</string>

    <!-- SWIPE VIEW PAGER TITLES -->
    <string name="profile_fragment_title">Perfil</string>
    <string name="orders_fragment_title">Pedidos</string>
    <string name="status_fragment_title">Status</string>


    <!--FECTHING DATA OR LOADING-->
    <string name="fecthing_list_data">Carregando…</string>


    <!--ITEM DETAIL ACTIVITY -->
    <string name="description">Descrição</string>


    <!--CART ACTIVITY-->
    <string name="cart_checkout">Salvar e pedir</string>
    <string name="your_cart">Seu carrinho</string>
    <string name="total_cart">Carrinho</string>
    <string name="service_cost">Serviço de quarto</string>
    <string name="cart_total">Total</string>
    <string name="clear_cart">Limpar carrinho</string>
    <string name="order_success">Pedido realizado!</string>
    <string name="order_error">Erro ao realizar seu pedido</string>

    <!--VIEW ITEM ORDER STATUS-->
    <string name="order_status_title">Pedido #ID</string>
    <string name="order_status_ordered">Pedido</string>
    <string name="order_status_on_going">Em andamento</string>
    <string name="order_status_done">Finalizado</string>
    <string name="order_status_id_1">Seu pedido está sendo confirmando pelo restaurante</string>
    <string name="order_status_id_2">Seu pedido foi aprovado e está sendo preparado</string>
    <string name="order_status_id_3">Seu pedido será entregue no quarto</string>
    <string name="button_order_confirm">Confirmar entrega do pedido</string>

    <!-- PROFILE FRAGMENT -->
    <string name="purchase_id"># %d</string>
    <string name="purchase_status_paid">Pago</string>
    <string name="purchase_status_pending">Pendente</string>
    <string name="purchase_balance">Balanço da estádia</string>
    <string name="daily_value_warning">Valor da diária não incluso*</string>

    <!--EMPTY STATE -->
    <string name="empty_state_no_purchase">Ops… Parece que você não comprou nada ainda</string>
    <string name="empty_state_swipe_right_to_shop">Arraste para direita para montar seu carrinho</string>
    <string name="empty_state_no_menu_itens">Ops… Parece que não há nada para comprar ainda</string>
    <string name="empty_state_no_status">Ops… Parece que você não pediu nada ainda</string>
    <string name="empty_state_swipe_left_to_shop">Arraste para esquerda para montar seu carrinho</string>
    <string name="empty_state_sorry">Pedimos desculpas pelo transtorno</string>

    <!--EXIT DIALOG -->
    <string name="exit_app_dialog_title">Saindo…</string>
    <string name="exit_app_dialog_message">Saindo aplicativo</string>
    <string name="negative_option">Não</string>
    <string name="positive_option">Sim</string>
    <string name="cancel_option">Não</string>

    <!-- COUNTRY SELECTOR ACTIVITY -->
    <string name="select_country">Escolha seu idioma</string>
    <string name="brazil">PT-BR</string>
    <string name="usa">EN-US</string>
    <string name="change_country">Trocar idioma</string>

    <string name="add_to_cart">Adicionar ao carrinho</string>
    <string name="alert_loading">Carregando, aguarde…</string>

    <!-- ORDER ACTIVITY -->
    <string name="guest_name">Hóspede</string>
    <string name="room">Quarto</string>
    <string name="daily_value">Diária</string>

    <!--CART DIALOG-->
    <string name="dialog_clear_cart">Você tem certeza que deseja limpar seu carrinho?</string>
    <string name="clean">Limpar</string>
    <string name="cancel">Cancelar</string>

</resources>
