<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/order_id"
        style="@style/CardTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/order_status_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/ordered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/order_status_ordered" />

            <TextView
                android:id="@+id/on_going"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/order_status_on_going" />

            <TextView
                android:id="@+id/done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/order_status_done" />


        </LinearLayout>

        <com.example.lucas.deliva.mechanism.connection.view.StepIndicator
            android:id="@+id/step_indicator"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:currentRadius="6dp"
            app:currentStepColor="@color/next_default"
            app:currentStrokeColor="@color/next_default"
            app:lineWidth="7dp"
            app:nextColor="@color/step_default"
            app:radius="6dp"
            app:showPositionInsideText="false"
            app:stepColor="@color/next_default"
            app:stepCount="3"
            app:strokeColor="@color/step_default" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/order_status_id_1"
                android:textStyle="bold" />

            <Button
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorAccent"
                android:visibility="invisible"
                android:maxLines="1"
                android:text="@string/button_order_confirm"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>
