<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/dialog_clear_cart"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/confirm"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:maxLines="1"
                android:text="@string/clean"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:maxLines="1"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="16sp" />


        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>