<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <!--<ImageView-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="100dp"-->
            <!--android:scaleType="fitXY"-->
            <!--android:layout_marginTop="30dp"-->
            <!--android:layout_gravity="center|top"-->
            <!--android:src="@drawable/app_icon" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/app_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_country"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:textAllCaps="true"
                android:layout_marginTop="30dp"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp">

                    <LinearLayout
                        android:id="@+id/brazil_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_brazil"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/brazil"
                            android:textColor="@android:color/white"
                            android:layout_gravity="center_vertical"
                            android:textSize="25sp"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/usa_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="visible"
                        android:layout_marginTop="25dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_usa"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/usa"
                            android:textColor="@android:color/white"
                            android:layout_gravity="center_vertical"
                            android:textSize="25sp"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"/>
                    </LinearLayout>

                </LinearLayout>

            </ScrollView>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>