<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackgroundActivity"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:src="@drawable/bg" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/app_icon" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/LightEditText"
                app:errorTextAppearance="@style/error_appearance">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:ellipsize="end"
                    android:hint="@string/user_email"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/LightEditText"
                app:errorTextAppearance="@style/error_appearance">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:ellipsize="end"
                    android:hint="@string/user_password"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_enter"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/colorAccent"
                android:maxLines="1"
                android:text="login"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
            <!--android:background="@drawable/selector_rounded_button_blue"-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/login_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="Esquece seu login? Clique aqui"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/country_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_country"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"/>

                <ImageView
                    android:id="@+id/country_flag"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    tools:src="@drawable/ic_brazil"/>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</LinearLayout>